--- a/index.html
+++ b/index.html
@@ -20,11 +20,29 @@
             <Nav>
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="mercancia.html">Mercancia</a></li>
+                    <li><a href="mercancia.html">Catálogo</a></li>
                     <li><a href="galeria.html">Galeria</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </Nav>
-          
+
+            <h3>Sobre el vendedor</h3>
+
+            <div id="perfil">
+             <img src="imagenes/TomatePerfil.jpeg" id="TomatePerfil">
+             <p id="bio">Tomate es el gato de negocios más reconocido en Latinoamérica. Gran emprendedor de ventas second-and y pionero en la venta de cordones deshilachados. Con su gran carisma ha logrado conquistar a inversores de la talla de Carlos Slim, quien recomienda ampliamente su producto, siendo un gran consumidor de sus autoretratos.</p>
+            </div>
+
+            <div id="Referencias">
+                <h3>
+                    Referencias
+                </h3>
+
+                <img src="imagenes/Stacy.png" id="Stacy">
+                <h4>
+                    Stacy
+                </h4>
+                <p id="TextoRef">El mejor servicio de entrega y buena calidad en el producto mordido o arañado, piezas únicas de colección para los fans del Tomate ¡Lo amo! no soy un perro guau</p>
+            </div>
         </body>
 </html>
