--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
             <Nav>
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="mercancia.html">Mercancia</a></li>
+                    <li><a href="mercancia.html">Catálogo</a></li>
                     <li><a href="galeria.html">Galeria</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
