subida de archivo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h4>
                     Stacy
                 </h4>
-                <p id="TextoRef">El mejor servicio de entrega y buena calidad en el producto mordido o arañado, piezas únicas de colección para los fans del Tomate ¡Lo amo! no soy un perro guau</p>
+                <p id="textoref">El mejor servicio de entrega y buena calidad en el producto mordido o arañado, piezas únicas de colección para los fans del Tomate ¡Lo amo! no soy un perro guau</p>
             </div>
         </body>
 </html>
