--- a/contacto.html
+++ b/contacto.html
@@ -21,5 +21,16 @@
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </Nav>
+            <img src="imagenes/tomateform.png" id="tomateForm">
+            
+            <form action="" id="formulario">
+                Nombre: <input type="text" name="nombre" id="nombre"><br>
+                Edad:<input type="number" name="edad" id="edad"><br>
+               Hombre: <input type="radio" name="sexo" id="hombre" value="hombre">
+                Mujer: <input type="radio" name="sexo" id="mujer" value="mujer"><br>
+                Comentarios:<br><textarea rows="10" cols="30" name="comentarios" id="comentarios"
+                ></textarea> <br>
+                <button type="button" onclick="getData()">Enviar</button>
+            </form>
         </body>
 </html>
