--- a/mercancia.html
+++ b/mercancia.html
@@ -10,7 +10,7 @@
         </head>
         <body>
             <header>
-                <h1>Mercancia</h1>
+                <h1>Catálogo</h1>
             </header>
 
             <Nav>
@@ -18,7 +18,7 @@
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="mercancia.html">Catálogo</a></li>
                     <li><a href="galeria.html">Galeria</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="contacto.html">Registro</a></li>
                 </ul>
             </Nav>
         </body>
