--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <meta charset="utf-8">
             <title>Tomate's Bazar </title>
             <meta name="author" content="Tomate Casas">
-            <meta name="description" content="encuentra mercancia de fayuca importada y exportada por el mismisimo Tomate">
+            <meta name="description" content="Encuentra mercancia de fayuca importada y exportada por el mismisimo Tomate">
             <link type= "text/css" href="css/stylo.css" rel="stylesheet"/>
             <script src="js/inicio.js"></script>
         </head>
@@ -22,7 +22,7 @@
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="mercancia.html">Catálogo</a></li>
                     <li><a href="galeria.html">Galeria</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="contacto.html">Registro</a></li>
                 </ul>
             </Nav>
 
